Use uri instead of url